--- a/login_page.html
+++ b/login_page.html
@@ -6,6 +6,11 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<nav>
+	<ul>
+		<li><a href="admin.html">admin</a></li> <!-- link to the admin page -->
+	</ul>
+	</nav>
 	<div class="box">
 		<form autocomplete="off">
 			<h2>Sign in</h2>
