updated signup.html, css/style.css and added images folder

--- a/signup.html
+++ b/signup.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Sign Up</title>
+  </head>
+  <body>
+    <main class="main">
+      <article class="signUp-container">
+        <section class="signUp">
+          <h2>Sign Up</h2>
+          <form class="signUp-form">
+            <label for="firstname">Firstname:</label>
+            <input
+              type="text"
+              placeholder="Firstname"
+              required
+              pattern="[A-Za-z]{5-10}"
+            />
+            <label for="lastname">Lastname:</label>
+            <input
+              type="text"
+              placeholder="Lastname"
+              required
+              pattern="[A-Za-Z]{5-10}"
+            />
+            <label for="mobileno">Mobile Number:</label>
+            <input
+              type="text"
+              placeholder="Mobile number"
+              required
+              pattern="[0-9]{10}"
+            />
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              placeholder="Email Address"
+              required
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            />
+            <label for="username">Username:</label>
+            <input
+              type="text"
+              placeholder="Username"
+              pattern="[A-Za-z0-9_]{5,15}"
+              required
+            />
+            <label for="password">Password:</label>
+            <input
+              type="password"
+              placeholder="Password"
+              required
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+            />
+            <button class="btnSignUp">Create Account</button>
+          </form>
+        </section>
 
+        <p>Already have an account?<a href="login.html">Login</a></p>
+
+        <section class="socialIcons">
+          <ul>
+            <li>
+              <a href="#"><i class="fa-brands fa-google"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            </li>
+          </ul>
+        </section>
+      </article>
+    </main>
+  </body>
+</html>
