--- a/login_page.html
+++ b/login_page.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Animated Login Form</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<nav>
-	<ul>
-		<li><a href="admin.html">admin</a></li> <!-- link to the admin page -->
-	</ul>
-	</nav>
-	<div class="box">
-		<form autocomplete="off">
-			<h2>Sign in</h2>
-			<div class="inputBox">
-				<input type="text" required="required">
-				<span>Userame</span>
-				<i></i>
-			</div>
-			<div class="inputBox">
-				<input type="password" required="required">
-				<span>Password</span>
-				<i></i>
-			</div>
-			<div class="links">
-				<a href="#">Forgot Password ?</a>
-				<a href="#">Signup</a>
-			</div>
-			<input type="submit" value="Login">
-		</form>
-	</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Animated Login Form</title>
+    <link rel="stylesheet" href="login_page.css" />
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="admin.html">admin</a></li>
+        <!-- link to the admin page -->
+      </ul>
+    </nav>
+    <div class="box">
+      <form autocomplete="off">
+        <h2>Sign in</h2>
+        <div class="inputBox">
+          <input type="text" required="required" />
+          <span>Userame</span>
+          <i></i>
+        </div>
+        <div class="inputBox">
+          <input type="password" required="required" />
+          <span>Password</span>
+          <i></i>
+        </div>
+        <div class="links">
+          <a href="#">Forgot Password ?</a>
+          <a href="#">Signup</a>
+        </div>
+        <input type="submit" value="Login" />
+      </form>
+    </div>
+  </body>
 </html>
