--- a/admin.html
+++ b/admin.html
@@ -23,6 +23,6 @@
       </form>
     </div>
     
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
