--- a/login_page.html
+++ b/login_page.html
@@ -27,7 +27,7 @@
         </div>
         <div class="links">
           <a href="#">Forgot Password ?</a>
-          <a href="#">Signup</a>
+          <a href="signup.html">Signup</a>
         </div>
         <input type="submit" value="Login" />
       </form>
