--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,7 @@
       <form>
         <div class="form-group">
           <label for="email">Email address:</label>
-          <input type="email" class="form-control" required pattern="[a-z]{40}-(0-9){3}-[^A-Za-z0-9]{3}" id="email" placeholder="Enter email">
+          <input type="email" class="form-control" required pattern="[a-z]{40}(0-9){3}-[^A-Za-z0-9]{3}" id="email" placeholder="Enter email">
           <div class="error" id="email-error"></div>
         </div>
         <div class="form-group">
