--- a/signup.html
+++ b/signup.html
@@ -66,7 +66,7 @@
           </form>
         </section>
 
-        <p>Already have an account?<a href="login.html">Login</a></p>
+        <p>Already have an account?<a href="login_page.html">Login</a></p>
 
         <section class="socialIcons">
           <ul>
