--- a/admin.html
+++ b/admin.html
@@ -3,17 +3,54 @@
   <head>
     <title>Admin Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="stylesheet" href="css/style1.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div class="container">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="login_page.html">DXC Technologies</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="login_page.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="admin.html">Admin</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="container1">
       <h2>Admin Login</h2>
       <form>
-        <div class="form-group">
+        <div class="form-group1">
           <label for="email">Email address:</label>
           <input
             type="email"
-            class="form-control"
+            class="form-control1"
             required
             pattern="[A-Z]{2}-(0-9){3}[a-z]{30}-[^A-Za-z0-9]{3}"
             id="email"
@@ -21,11 +58,11 @@
           />
           <div class="error" id="email-error"></div>
         </div>
-        <div class="form-group">
+        <div class="form-group1">
           <label for="password">Password:</label>
           <input
             type="password"
-            class="form-control"
+            class="form-control1"
             required
             pattern="[A-Z]{2}-(0-9){3}[a-z]{30}-[^A-Za-z0-9]{3}"
             id="password"
