--- a/login_page.html
+++ b/login_page.html
@@ -47,7 +47,7 @@
         <h2>Sign in</h2>
         <div class="inputBox">
           <input type="text" required="required" />
-          <span>Userame</span>
+          <span>Username or Email</span>
           <i></i>
         </div>
         <div class="inputBox">
